# cardano-staking-smart-contract

./: .gitignore  README.md  cabal.project  staking-pool-sc.cabal
src/: MainToken.hs  Staking.hs
src/Staking/: Business.hs  OffChain.hs  OnChain.hs  Tokens.hs  Types.hs  Validator.hs
src/Staking/Business/: Pool.hs  Types.hs  User.hs
src/Utils/: OffChain.hs  ScriptContext.hs
test/: BCExplorer.hs  Main.hs
test/Tests/: BusinessTests.hs  TestUtils.hs  Tests.hs
test/Tests/Attacks/: AttackUtils.hs  Claim.hs  Compound.hs  Deposit.hs  Feed.hs  Withdraw.hs
test/Tests/OffChain/: Claim.hs  Compound.hs  Deposit.hs  Feed.hs  Register.hs  Start.hs  Unregister.hs  UseCaseTests.hs  Withdraw.hs
test/Tests/OnChain/: Claim.hs  Compound.hs  Deposit.hs  Feed.hs  Withdraw.hs
